--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1>instagram Filters CSS</h1>
         </div>
             <p>Examples Of Selfies With Instagram Filters</p>
-            <a href="#" class="link">
+            <a href="https://github.com/nickpratt23/instagram-filters-css" class="link">
                 <span>VIEW ON GITHUB</span>
             </a>
             <img id="uploadedImage" src="#" alt="Uploaded Image" style="display: none;">
@@ -33,7 +33,7 @@
             data-aos-duration="1000"
             data-aos-easing="ease-in-out"
             data-aos-delay="50">
-                <img src="img/matilda-selfie.jpg" alt="dog selfie no filter">
+                <img src="img/matilda-selfie.jpg" alt="dog selfie no filter dog selfie">
                 <h3>No Filter</h3>
             </div>
             <div class="image-card"  
@@ -41,7 +41,7 @@
             data-aos-duration="1000"
             data-aos-easing="ease-in-out"
             data-aos-delay="50">
-                <img class="aden" src="img/matilda-selfie.jpg" alt="Image 1">
+                <img class="aden" src="img/matilda-selfie.jpg" alt="aden filter dog selfie">
                 <h3>Aden</h3>
             </div>
             <div class="image-card"  
@@ -49,7 +49,7 @@
             data-aos-duration="1000"
             data-aos-easing="ease-in-out"
             data-aos-delay="75">
-                <img class="xpro2" src="img/matilda-selfie.jpg" alt="Image 2">
+                <img class="xpro2" src="img/matilda-selfie.jpg" alt="xpro2 filter dog selfie">
                 <h3>Xpro2</h3>
             </div>
             <div class="image-card"  
@@ -57,7 +57,7 @@
             data-aos-duration="1000"
             data-aos-easing="ease-in-out"
             data-aos-delay="100">
-                <img class="moon" src="img/matilda-selfie.jpg" alt="Image 3">
+                <img class="moon" src="img/matilda-selfie.jpg" alt="moon filter dog selfie">
                 <h3>Moon</h3>
             </div>
             <div class="image-card"  
@@ -65,7 +65,7 @@
             data-aos-duration="1000"
             data-aos-easing="ease-in-out"
             data-aos-delay="150">
-                <img class="nashville" src="img/matilda-selfie.jpg" alt="Image 4">
+                <img class="nashville" src="img/matilda-selfie.jpg" alt="nashville filter dog selfie">
                 <h3>Nashville</h3>
             </div>
             <div class="image-card"  
@@ -73,7 +73,7 @@
             data-aos-duration="1000"
             data-aos-easing="ease-in-out"
             data-aos-delay="250">
-                <img class="toaster" src="img/matilda-selfie.jpg" alt="Image 5">
+                <img class="toaster" src="img/matilda-selfie.jpg" alt="toaster filter dog selfie">
                 <h3>Toaster</h3>
             </div>
             <div class="image-card"  
@@ -81,7 +81,7 @@
             data-aos-duration="1000"
             data-aos-easing="ease-in-out"
             data-aos-delay="250">
-                <img class="inkwell" src="img/matilda-selfie.jpg" alt="Image 6">
+                <img class="inkwell" src="img/matilda-selfie.jpg" alt="inkwell filter dog selfie">
                 <h3>Inkwell</h3>
                 </div>
                 <div class="image-card"  
@@ -89,7 +89,7 @@
             data-aos-duration="1000"
             data-aos-easing="ease-in-out"
             data-aos-delay="300">
-                    <img class="Walden" src="img/matilda-selfie.jpg" alt="Image 4">
+                    <img class="Walden" src="img/matilda-selfie.jpg" alt="Walden filter dog selfie">
                     <h3>`Walden</h3>
                 </div>
                 <div class="image-card"  
@@ -97,7 +97,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="350">
-                    <img class="perpetua" src="img/matilda-selfie.jpg" alt="Image 5">
+                    <img class="perpetua" src="img/matilda-selfie.jpg" alt="perpetua filter dog selfie">
                     <h3>Perpetua</h3>
                 </div>
                 <div class="image-card"  
@@ -105,7 +105,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="400">
-                    <img class="hudson" src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="hudson" src="img/matilda-selfie.jpg" alt="hudson filter dog selfie">
                     <h3>Hudson</h3>
                 </div>
                 <div class="image-card"  
@@ -113,7 +113,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="450">
-                    <img class="reyes" src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="reyes" src="img/matilda-selfie.jpg" alt="reyes filter dog selfie">
                     <h3>Reyes</h3>
                 </div>
                 <div class="image-card"  
@@ -121,7 +121,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="500">
-                    <img class="gingham" src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="gingham" src="img/matilda-selfie.jpg" alt="gingham filter dog selfie">
                     <h3>Gingham</h3>
                 </div>
                 <div class="image-card"  
@@ -129,7 +129,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="550">
-                    <img class="slumber" src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="slumber" src="img/matilda-selfie.jpg" alt="slumber filter dog selfie">
                     <h3>slumber</h3>
                 </div>
                 <div class="image-card"  
@@ -137,7 +137,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="600">
-                    <img class="earlybird" src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="earlybird" src="img/matilda-selfie.jpg" alt="early bird filter dog selfie">
                     <h3>Early Bird</h3>
                 </div>
                 <div class="image-card"  
@@ -145,7 +145,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="650">
-                    <img class="lofi" src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="lofi" src="img/matilda-selfie.jpg" alt="lofi filter dog selfie">
                     <h3>lofi</h3>
                 </div>
                 <div class="image-card"  
@@ -153,7 +153,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="700">
-                    <img class="brannan" src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="brannan" src="img/matilda-selfie.jpg" alt="brannan filter dog selfie">
                     <h3>brannan</h3>
                 </div>
                 <div class="image-card"  
@@ -161,7 +161,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="750">
-                    <img class="kelvin" src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="kelvin" src="img/matilda-selfie.jpg" alt="kelvin filter dog selfie">
                     <h3>kelvin</h3>
                 </div>
                 <div class="image-card"  
@@ -169,7 +169,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="800">
-                    <img class="valencia" src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="valencia" src="img/matilda-selfie.jpg" alt="valencia filter dog selfie">
                     <h3>valencia</h3>
                 </div>
                 <div class="image-card"  
@@ -177,7 +177,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="850">
-                    <img class="maven" src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="maven" src="img/matilda-selfie.jpg" alt="maven filter dog selfie">
                     <h3>maven</h3>
                 </div>
                 <div class="image-card"  
@@ -185,7 +185,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="900">
-                    <img class="stinson" src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="stinson" src="img/matilda-selfie.jpg" alt="stinson filter dog selfie">
                     <h3>stinson</h3>
                 </div>
                 <div class="image-card"  
@@ -193,7 +193,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="950">
-                    <img class="rise" src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="rise" src="img/matilda-selfie.jpg" alt="rise filter dog selfie">
                     <h3>rise</h3>
                 </div>
                 <div class="image-card"  
@@ -233,7 +233,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="1200">
-                    <img class="_1977 " src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="_1977 " src="img/matilda-selfie.jpg" alt="1977 filter dog selfie">
                     <h3>1977 </h3>
                 </div>
                 <div class="image-card"  
@@ -241,7 +241,7 @@
                 data-aos-duration="1000"
                 data-aos-easing="ease-in-out"
                 data-aos-delay="1250">
-                    <img class="mayfair " src="img/matilda-selfie.jpg" alt="Image 6">
+                    <img class="mayfair " src="img/matilda-selfie.jpg" alt="mayfair filter dog selfie">
                     <h3>Mayfair</h3>
                 </div>
            
@@ -249,7 +249,7 @@
         </section>
     </main>
     <footer>
-        <p class="copyright">&copy; 2023 Your Website. All rights reserved.</p>
+        <p class="copyright">&copy; 2023. No Rights rights reserved.</p>
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
